# fibonacci_fractal

./: .clang-format  BaseInput.h  BaseInputParser.h  CMakeLists.txt  CODE_PLAN  FibFractInput.h  FibFractInputParser.cpp  FibFractInputParser.h  FibFractal.cpp  FibFractal.h  FibFractalBuilder.cpp  FibFractalBuilder.h  FibFractalInput.cpp  FibFractalInput.h  FibFractalInputParser.cpp  FibonacciData.cpp  Fractal.h  FractalBuilder.h  ImageData.cpp  ImageData.h  InputParser.cpp  InputParser.h  Makefile  PNGRenderer.cpp  PNGRenderer.h  README.md  Renderer.h  Segment.h  fibonacci_fractal.c  fibonacci_fractal.cpp  fibonacci_fractal.maybe_working.c  main.cpp  png_wrapper.h  utils.h
include/: BaseInputParser.h  FibFractalInput.h  FibFractalInputParser.h  FractalDirector.h  ImageData.h  PNGRenderer.h
src/: FibFractalBuilder.cpp  FibFractalInput.cpp  FibFractalInputParser.cpp  ImageData.cpp  PNGRenderer.cpp  main.cpp
